--- a/app/src/main/res/layout/activity_quiz_app.xml
+++ b/app/src/main/res/layout/activity_quiz_app.xml
@@ -1,18 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_quiz_app"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="ch.ralena.quizapp.QuizAppActivity">
+	android:id="@+id/quizLayout"
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:tools="http://schemas.android.com/tools"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	android:paddingBottom="@dimen/activity_vertical_margin"
+	android:paddingLeft="@dimen/activity_horizontal_margin"
+	android:paddingRight="@dimen/activity_horizontal_margin"
+	android:paddingTop="@dimen/activity_vertical_margin"
+	tools:context="ch.ralena.quizapp.QuizAppActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+	<TextView
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:text="Welcome to QuizApp!"
+		android:textSize="34sp"
+		android:layout_alignParentTop="true"
+		android:layout_centerHorizontal="true"/>
+
+	<TextView
+		android:text="TextView"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_below="@+id/textView"
+		android:layout_alignParentEnd="true"
+		android:layout_marginTop="47dp"
+		android:id="@+id/scoreTextView"
+		android:visibility="invisible"/>
+
+	<TextView
+		android:text="1 + 2 = ...?"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:id="@+id/questionTextView"
+		android:textSize="24sp"
+		android:layout_centerVertical="true"
+		android:layout_centerHorizontal="true"/>
+
+	<LinearLayout
+		android:orientation="horizontal"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_alignParentBottom="true"
+		android:id="@+id/buttons">
+
+		<Button
+			android:text="Start Test"
+			android:layout_width="wrap_content"
+			android:layout_height="90dp"
+			android:layout_alignParentBottom="true"
+			android:layout_alignParentStart="true"
+			android:id="@+id/startButton"
+			android:layout_weight="0.96"
+			android:layout_margin="2dp"
+			android:textSize="20sp"/>
+
+	</LinearLayout>
 </RelativeLayout>
