--- a/app/src/main/res/layout/activity_quiz_app.xml
+++ b/app/src/main/res/layout/activity_quiz_app.xml
@@ -9,6 +9,7 @@
 	android:paddingLeft="@dimen/activity_horizontal_margin"
 	android:paddingRight="@dimen/activity_horizontal_margin"
 	android:paddingTop="@dimen/activity_vertical_margin"
+	android:background="#FFCCBC"
 	tools:context="ch.ralena.quizapp.QuizAppActivity">
 
 	<TextView
@@ -24,6 +25,7 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_below="@+id/textView"
+		android:textColor="@color/colorPrimaryDark"
 		android:layout_alignParentEnd="true"
 		android:layout_marginTop="47dp"
 		android:id="@+id/scoreTextView"
@@ -31,6 +33,8 @@
 
 	<TextView
 		android:text="1 + 2 = ...?"
+		android:textStyle="bold"
+		android:textColor="#212121"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:id="@+id/questionTextView"
@@ -51,10 +55,13 @@
 			android:layout_height="90dp"
 			android:layout_alignParentBottom="true"
 			android:layout_alignParentStart="true"
+			android:background="@color/colorPrimary"
+			android:textColor="#757575"
+			android:textStyle="bold"
 			android:id="@+id/startButton"
 			android:layout_weight="0.96"
 			android:layout_margin="2dp"
-			android:textSize="20sp"/>
+			android:textSize="22sp"/>
 
 	</LinearLayout>
 </RelativeLayout>
