--- a/app/src/main/res/layout/activity_quiz_app.xml
+++ b/app/src/main/res/layout/activity_quiz_app.xml
@@ -10,7 +10,7 @@
 	android:paddingRight="@dimen/activity_horizontal_margin"
 	android:paddingTop="@dimen/activity_vertical_margin"
 	android:background="#FFCCBC"
-	tools:context="ch.ralena.quizapp.QuizAppActivity">
+	tools:context="ch.ralena.quizapp.activity.QuizAppActivity">
 
 	<TextView
 		android:layout_width="wrap_content"
